nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-loadbalancer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: bril-loadbalancer
        image: bril-nginx:0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
