runcontrol-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runcontrol-client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: runcontrol-client
  template:
    metadata:
      labels:
        app: runcontrol-client
    spec:
      containers:
      - name: bril-runcontrol-client
        image: bril-runcontrol-client:0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runcontrol-server-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: runcontrol-server
  template:
    metadata:
      labels:
        app: runcontrol-server
    spec:
      containers:
      - name: bril-runcontrol-server
        image: bril-runcontrol-server:0.0.1
        imagePullPolicy: Never
        ports:
          - containerPort: 5010
        volumeMounts:
          - mountPath: /var/log/
            name: logs-volume
          - mountPath: /root/RunControl/brildata/db
            name: db-authentication
            readOnly: true
          - mountPath: /root/RunControl/config.json
            name: database-config
            readOnly: true
            subPath: config.json
          - mountPath: /root/RunControl/cherrypy.config
            name: flask-config
            readOnly: true
            subPath: cherrypy.config
      volumes:
        - name: logs-volume
          persistentVolumeClaim:
            claimName: persistent-logs
        - name: db-authentication
          secret:
            secretName: oracle-db.config
        - name: database-config
          configMap:
            name: global.config
        - name: flask-config
          configMap:
            name: cherry.config
