runcontrol-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: runcontrol-client-service
spec:
  selector:
    app: runcontrol-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
