webmonitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webmonitor-service
spec:
  selector:
    app: webmonitor
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
