ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /webmonitor18
spec:
  ingressClassName: nginx
  rules:
    - host: bril # IP is not accepted
      http:
        paths:
          - path: /webmonitor18
            pathType: Prefix
            backend:
              service:
                name: webmonitor-service
                port:
                  number: 3000
          - path: /runcontrol18
            pathType: Prefix
            backend:
              service:
                name: runcontrol-client-service
                port:
                  number: 3000
